2004-09-07  Andreas Schwab  <schwab@suse.de>

	* automake.in ($PATH_PATTERN): Add `+'.

2004-09-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/missing3.test: New file (check for Paolo's change below).
	* tests/Makefile.am (TESTS): Add missing3.test.

2004-09-07  Paolo Bonzini  <bonzini@gnu.org>

	* missing: Handle all command line options together.  Add a
	separate case statement to detect failed runs, and fail
	silently there if --help or --version is passed to the program.

2004-08-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.9.1a.

2004-08-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.9.1.

	* lib/config.guess, lib/texinfo.tex: New upstream versions.

	For PR automake/433:
	* configure.ac (pkgvdatadir): Define using "$PACKAGE", not "automake".

	Fix PR automake/432:
	* lib/am/yacc.am [!%?MORE-THAN-ONE%]: Replace `#line's in y.tab.h too.
	* tests/yacc7.test: Check this.

2004-08-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (yacc_lex_finish_helper): Fix definition of YLWRAP
	when ylwrap is installed in a default aux dir found in a parent
	package.
	* tests/subpkg.test: Augment to check that YLWRAP is installed
	properly.
	* doc/automake.texi (Yacc and Lex): ylwrap is not sought is the
	current directory.
	Report from Norman Gray.

2004-08-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Optional): Update documentation for
	AC_CANONICAL_BUILD, AC_CANONICAL_HOST, and AC_CANONICAL_TARGET.

	* automake.in (AC_CANONICAL_HOST, AC_CANONICAL_SYSTEM): Replace by ...
	(AC_CANONICAL_BUILD, AC_CANONICAL_HOST, AC_CANONICAL_TARGET): ... these.
	(scan_autoconf_traces): Scan for the latter three macros instead of
	the former two.
	(make_paragraphs): Adjust definitions of %BUILD%, %HOST%, and %TARGET%.
	* tests/hosts.test: New file.
	* tests/Makefile.am (TESTS): Add hosts.test.
	Report and test case from Norman Gray.

2004-08-01  Alexandre Duret-Lutz  <adl@gnu.org>
