@@ -1,3 +1,10 @@
+2004-09-07  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (handle_clean): Sort rm commands output for
+	mostlyclean-generic, clean-generic, distclean-generic, and
+	maintainer-clean-generic.
+	Report from Bob Friesenhahn.
+
 2004-09-07  Andreas Schwab  <schwab@suse.de>
 
 	* automake.in ($PATH_PATTERN): Add `+'.
